<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity"
    android:padding="@dimen/gap_xxl">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:id="@+id/clcontainerMaster">
        <!-- Logo -->
        <ImageView
            android:layout_width="@dimen/img_logo_main"
            android:layout_height="@dimen/img_logo_main"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:src="@drawable/logo"
            android:contentDescription="logo"
            android:id="@+id/img_logo"/>
        <!-- Text title -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/font_xxl"
            android:text="@string/new_user"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/img_logo"
            android:layout_marginTop="@dimen/gap_lg"
            android:textColor="@color/colorTextBlackPrimary"
            android:textAllCaps="true"
            android:id="@+id/tv_title"/>
        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="@style/EditTextField"
            android:id="@+id/et_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_title"
            android:layout_marginTop="@dimen/gap_lg"
            android:background="@drawable/edit_text_bg"
            android:hint="@string/please_enter_your_name"
            android:inputType="textPersonName"/>
        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="@style/EditTextField"
            android:id="@+id/et_email"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_name"
            android:layout_marginTop="@dimen/gap_lg"
            android:background="@drawable/edit_text_bg"
            android:hint="@string/please_enter_your_email"
            android:inputType="textEmailAddress"/>
        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="@style/EditTextField"
            android:id="@+id/et_address"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_email"
            android:layout_marginTop="@dimen/gap_lg"
            android:background="@drawable/edit_text_bg"
            android:hint="@string/please_enter_your_address"
            android:inputType="textPostalAddress"/>
        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="@style/EditTextField"
            android:id="@+id/et_password"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_address"
            android:layout_marginTop="@dimen/gap_lg"
            android:background="@drawable/edit_text_bg"
            android:hint="@string/please_enter_your_password"
            android:inputType="textPassword"/>
        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="@style/EditTextField"
            android:id="@+id/et_password_confirm"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_password"
            android:layout_marginTop="@dimen/gap_lg"
            android:background="@drawable/edit_text_bg"
            android:hint="@string/please_enter_your_password_confirm"
            android:inputType="textPassword"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="@style/PrimaryButton.Positive"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_password_confirm"
            android:layout_marginTop="@dimen/gap_lg"
            android:text="@string/register_user"
            android:id="@+id/btn_register"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/font_lg"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_register"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="@dimen/gap_lg"
            android:text="@string/are_you_an_existing_user_login"
            android:textColor="@color/colorTextBlackSecondary"
            android:id="@+id/tv_login"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>